--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.rabbitmq.host=127.0.0.1
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+#消息发送到交换机确认机制，是否确认回调
 spring.rabbitmq.publisher-confirms=true
 spring.rabbitmq.publisher-returns=true
 
